--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "private": true,
   "dependencies": {
-    "axios": "^0.8.1",
+    "axios": "^0.9.1",
     "babel-core": "^6.3.15",
     "babel-polyfill": "^6.3.14",
     "bluebird": "^3.0.6",
     "bootstrap": "^3.3.6",
     "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
-    "fbjs": "^0.5.0",
+    "fbjs": "^0.7.2",
     "font-awesome": "^4.5.0",
-    "history": "~1.13.1",
+    "history": "^2.0.0",
     "jsonwebtoken": "^5.4.1",
     "key-mirror": "^1.0.1",
     "react": "^0.14.3",
@@ -19,10 +19,10 @@
     "react-dom": "^0.14.3",
     "react-helmet": "^2.2.0",
     "react-redux": "^4.0.1",
-    "react-router": "^1.0.2",
-    "redux": "^3.0.5",
+    "react-router": "^2.0.0",
+    "react-router-redux": "^4.0.0",
+    "redux": "^3.3.1",
     "redux-logger": "^2.2.1",
-    "redux-simple-router": "^1.0.0",
     "redux-thunk": "^1.0.2",
     "serialize-javascript": "^1.1.2",
     "source-map-support": "^0.4.0"
@@ -32,16 +32,18 @@
     "babel": "^6.1.18",
     "babel-cli": "^6.3.15",
     "babel-loader": "^6.2.0",
+    "babel-plugin-react-transform": "^2.0.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "babel-preset-stage-0": "^6.3.13",
+    "browser-sync": "^2.11.1",
     "css-loader": "^0.23.0",
     "del": "^2.2.0",
-    "es6-promise": "~3.0.2",
+    "es6-promise": "~3.1.2",
     "file-loader": "^0.8.5",
     "less": "^2.5.3",
     "less-loader": "^2.2.2",
-    "lodash.merge": "^3.3.2",
+    "lodash.merge": "^4.3.2",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "postcss-loader": "^0.8.0",
@@ -50,7 +52,7 @@
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
-    "webpack-bundle-tracker": "0.0.8",
+    "webpack-bundle-tracker": "0.0.93",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-dev-server": "^1.14.0",
     "webpack-hot-middleware": "^2.6.0"
