--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "ncp": "^2.0.0",
     "postcss-loader": "^0.8.0",
     "react-hot-loader": "^1.3.0",
+    "react-transform-catch-errors": "^1.0.2",
+    "react-transform-hmr": "^1.0.3",
+    "redbox-react": "^1.2.2",
     "replace": "^0.3.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
